# advent-of-code

./: README.md
2024/: README.md
2024/day01/: Makefile  (+4 more)
2025/: .gitignore  .python-version  README.md  pyproject.toml  tasks.py
2025/agoc/: .gitignore  README.md
2025/agoc/day01/: go.mod  puzzle.go
2025/agoc/src/caroon.org/aoc25/: .gitignore  go.mod  go.sum  main.go  tasks.py
2025/agoc/src/caroon.org/aoc25/day01/: puzzle.go  puzzle_test.go
2025/agoc/src/caroon.org/aoc25/day02/: puzzle.go
2025/agoc/src/caroon.org/aoc25/day03/: puzzle.go
2025/agoc/src/caroon.org/aoc25/day04/: puzzle.go
2025/aoc/day01/: README.md  puzzle.py
2025/aoc/day02/: README.md  puzzle.py  test-input.txt
2025/aoc/day03/: README.md  puzzle.py  test-input.txt
2025/aoc/day04/: README.md  puzzle.py
2025/aoc/day05/: README.md  ingredient_range.py  puzzle.py
2025/aoc/day06/: README.md  puzzle.py
2025/aoc/day07/: README.md  puzzle.py
2025/aoc/day08/: README.md  puzzle.py
2025/aoc/day09/: README.md  puzzle.py
2025/aoc/day10/: README.md  factory_machine.py  puzzle.py
2025/aoc/day11/: README.md  puzzle.py
2025/aoc/day12/: README.md  puzzle.py  region.py  shape.py
2025/aoc/lib/: constants.py  location.py  point.py  puzzle.py  utils.py
2025/input/: .gitignore  day01-input.enc  day02-input.enc  day03-input.enc  day04-input.enc  day05-input.enc  day06-input.enc  day07-input.enc  day08-input.enc  day09-input.enc  day10-input.enc  day11-input.enc  day12-input.enc
2025/tasks/: __init__.py
2025/tests/: __init__.py  answers.toml  test_day01.py  test_day02.py  test_puzzles.py
(+152 files in other folders)
