[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "advent-of-code"
version = "2025.12"
readme = "README.md"
# dynamic = ["version"]
dependencies = ["invoke ~= 2.2"]

# [tool.hatch.version]
# path = "aoc/version.py"

[tool.hatch.build.targets.sdist]
exclude = ["/docs"]

[tool.hatch.build.targets.wheel]
packages = ["aoc"]

# https://docs.astral.sh/ruff/configuration/
[tool.ruff.lint]
ignore = [
    "T201",  # `print` found
    "FA102", # Missing `from __future__ import annotations`
]
